--- a/contact.css
+++ b/contact.css
@@ -8,9 +8,11 @@
     height: 35px;
     font-size: 15px;
     padding: 8px;
+    transition: transform 0.2s ease;
 }
 .input:hover {
     background-color: white;
+    transform: scale(1.05);
 }
 textarea {
     margin: 10px 10px 5px 5px;
@@ -19,12 +21,15 @@ textarea {
     height: 35px;
     font-size: 15px;
     padding: 8px;
+    transition: transform 0.2s ease;
 }
 textarea:hover {
     background-color: white;
+    transform: scale(1.05);
 }
 label {
     font-size: 20px;
+    color: #FEF200;
 }
 .para {
     display: flex;
@@ -37,6 +42,9 @@ label {
 }
 .file {
     margin: 10px 10px 5px 5px;
+}
+.file input {
+    color: #FEF200;
 }
 #btn {
     padding: 8px 16px;
