--- a/contact.css
+++ b/contact.css
@@ -1,11 +1,34 @@
+.bodd {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.all {
+    width: 500px;
+    border: 1px solid white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-height: 100vh;
+    box-shadow: 0px 0px 20px rgba(255,255,255,0.5);
+}
 .form {
     padding: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.imp {
+    color: red;
 }
 .input {
-    margin: 10px 10px 5px 5px;
+    margin: 10px 10px 5px 8px;
     background-color: #dce3df;
     border-radius: 4px;
     height: 35px;
+    width: 95%;
     font-size: 15px;
     padding: 8px;
     transition: transform 0.2s ease;
@@ -15,7 +38,12 @@
     transform: scale(1.05);
 }
 textarea {
-    margin: 10px 10px 5px 5px;
+    margin: 10px 10px 5px 8px;
+    width: 95%;
+    max-width: 97%;
+    min-width: 30%;
+    /* min-height: 40%; */
+    max-height: 40%;
     background-color: #dce3df;
     border-radius: 4px;
     height: 35px;
@@ -33,29 +61,37 @@ label {
 }
 .para {
     display: flex;
+    flex-direction: column;
 }
 .para label {
     align-content: center;
+    padding-right: 4px;
 }
 #myfile {
     padding-left: 5px;
 }
 .file {
-    margin: 10px 10px 5px 5px;
+    margin: 10px 10px 5px 0;
 }
 .file input {
     color: #FEF200;
 }
+.bton {
+    display: flex;
+    justify-content: flex-end;
+}
 #btn {
     padding: 8px 16px;
-    margin: 5px;
+    margin: 5px 10px;
     cursor: pointer;
     background-color: #F4D947;
     font-size: 15px;
     color: black;
     border: none;
-    border-radius: 4px;    
+    border-radius: 4px;  
+    transition: transform 0.4s ease;  
 }
 #btn:hover {
+    transform: scale(1.2);
     background-color: #EE8E13;
 }
